--- a/week6/assets/styles/style.css
+++ b/week6/assets/styles/style.css
@@ -283,7 +283,6 @@ h4 {
     margin-top: 50px;
     height: 50px;
     background: none;
-    border: 1;
     color: white;
     border: 1px solid white;
     text-transform: uppercase;
@@ -305,7 +304,7 @@ h4 {
     border: 1px solid white;
     border-right: none;
     border-left: none;
-    margin-bottom: opx;
+    margin-bottom: 0px;
     border-bottom: none;
 }
 
