--- a/week6/styles/style.css
+++ b/week6/styles/style.css
@@ -34,6 +34,10 @@ h4 {
     text-align: center;
 }
 
+.container {
+    display: grid;
+}
+
 .navbar {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -44,6 +48,8 @@ h4 {
     border: 1px solid white;
     border-right: none;
     border-left: none;
+    border-left: none;
+    grid-column: 1/3;
 
 }
 
@@ -60,8 +66,10 @@ h4 {
 
 .header {
     background: url(../assets/images/bgc.png);
+    background-repeat: no-repeat;
     background-size: 100%;
-    height: 660px;
+    height: 100%;
+
 }
 
 .header-button {
@@ -70,9 +78,9 @@ h4 {
     grid-template-columns: 1fr 1fr;
     justify-items: center;
     width: 25%;
-    margin: 330px auto;
+    margin: 27% auto;
     padding: 15px;
-    margin-top: 400px;
+
     align-items: end;
     margin-bottom: 0px;
     text-transform: uppercase;
@@ -134,14 +142,15 @@ h4 {
 
 .section {
     display: grid;
-    width: 63%;
+    width: 70%;
     grid-template-columns: 50% 50%;
     margin: 0 auto;
     margin-top: 60px;
     margin-bottom: 60px;
     border-top: 1px solid #998431;
-    padding: 60px;
-    padding-left: 0px;
+    border-bottom: 1px solid #998431;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .sectionleft {
@@ -157,12 +166,10 @@ h4 {
 }
 
 .table {
-    border: 1px solid #282828;
-    padding: 10px;
     display: grid;
     grid-template-columns: 1fr 4fr;
     margin: 5px;
-    text-align: center;
+    margin-left: 0px;
 }
 
 .textsection {
@@ -183,19 +190,21 @@ h4 {
 .sectionright {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+    align-content: start;
 }
 
 .wineonfield {
-    width: 510px;
-    height: 500px;
+    max-width: 100%;
+
     grid-column: 1/3;
-    margin-bottom: 20px;
+
 }
 
 .bottleline,
 .bottlegroup {
     display: grid;
-    width: 255px;
+    max-width: 100%;
     height: 228px;
     grid-row: 2/3;
 }
@@ -313,7 +322,7 @@ h4 {
 }
 
 .footercontact {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+
     margin: 0 auto 50px;
     width: 70%;
     padding: 15px;
@@ -321,4 +330,70 @@ h4 {
     border: 1px solid white;
     border-right: none;
     border-left: none;
+}
+
+@media screen and (max-width: 599px) {
+
+
+
+    .button {
+        background: #99862A;
+        border: none;
+        text-transform: uppercase;
+    }
+
+    .header-button {
+        display: grid;
+        grid-template-rows: 1fr;
+        grid-template-columns: 1fr;
+        justify-items: center;
+        width: 25%;
+        margin: auto;
+        align-items: end;
+        margin-bottom: 0px;
+        text-transform: uppercase;
+    }
+
+    .wineonfield,
+    .bottleline,
+    .bottlegroup {
+        display: none;
+
+    }
+
+    .image2 {
+        display: none;
+
+    }
+
+    .image3 {
+        display: none;
+
+    }
+
+    .footerbar {
+        display: grid;
+        grid-template-columns: 1fr;
+        margin: 50px auto 0px;
+        width: 70%;
+        padding: 15px;
+        text-align: center;
+        border: 1px solid white;
+        border-right: none;
+        border-left: none;
+        margin-bottom: 0px;
+        border-bottom: none;
+    }
+
+    .footercontact {
+        display: grid;
+        grid-template-columns: 1fr;
+        margin: 0 auto 50px;
+        width: 70%;
+        padding: 15px;
+        text-align: center;
+        border: 1px solid white;
+        border-right: none;
+        border-left: none;
+    }
 }
